examples/test/testpolicy3638.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3638
  namespace: namespace4
spec:
  podSelector:
    matchLabels:
      key26: value41
      key39: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value32
          key18: value41
      podSelector:
        matchLabels:
          key46: value46
